//java 11

sourceCompatibility = 11
targetCompatibility = 11

if (project == project(':sylph-web')) {
  project.dependencies {
    implementation group: 'javax.xml.bind', name: 'jaxb-api', version: '2.3.0'
    implementation group: 'javax.activation', name: 'activation', version: '1.1.1'
  }
}

tasks.withType(JavaCompile) {
  options.encoding = 'UTF-8'
  options.compilerArgs << "--add-exports=java.base/jdk.internal.ref=ALL-UNNAMED"
  options.compilerArgs << "--add-exports=java.base/sun.reflect.generics.reflectiveObjects=ALL-UNNAMED"
  options.compilerArgs << "--add-exports=java.base/sun.reflect.generics.tree=ALL-UNNAMED"
  options.compilerArgs << "--add-exports=java.base/sun.reflect.generics.repository=ALL-UNNAMED"
  options.compilerArgs << "--add-exports=java.base/sun.nio.cs=ALL-UNNAMED"
  options.compilerArgs << "--add-exports=java.base/jdk.internal.vm.annotation=ALL-UNNAMED"
}

tasks.withType(Test) {
  jvmArgs += "--add-modules=jdk.unsupported"
  jvmArgs += "--add-opens=java.base/jdk.internal.ref=ALL-UNNAMED"
  jvmArgs += "--add-opens=java.base/jdk.internal.loader=ALL-UNNAMED"
  jvmArgs += "--add-opens=java.base/jdk.internal.misc=ALL-UNNAMED"
}

tasks.withType(JavaExec) {
  jvmArgs += "--add-modules=jdk.unsupported"
  jvmArgs += "--add-opens=java.base/jdk.internal.ref=ALL-UNNAMED"
  jvmArgs += "--add-opens=java.base/jdk.internal.loader=ALL-UNNAMED"
  jvmArgs += "--add-opens=java.base/jdk.internal.misc=ALL-UNNAMED"
}